--- a/index.html
+++ b/index.html
@@ -2,12 +2,57 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <title>leonel pereira</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C.V Leonel Pereira</title>
+  <link rel="stylesheet" href="estilo.css">
+<style>
+  * {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+  }
+  .header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+  }
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  </style>
+  </head>
+  <body>
+  
+  <div class="header">
+    <h1>Leonel Pereira</h1>
+  </div>
+  
+  <div class="topnav">
+    <a href="estudios.html">Link</a>
+    <a href="competencias.html">Link</a>
+    <a href="experiencia.html">Link</a>
+  </div>
+  
+  </body>
+  </html>
 </head>
 <body>
-<h1 style="color: rgb(27, 86, 140); font-size: medium;">
-    Leonel Pereira
-<h2 style="color: blueviolet;font-weight: 500;"> AAAAA
+<h1 ><img src="JPG/lili2.jpg" width="700" height="850" alt="Foto Leonel" class="foto"></h1>
+<p>Hola buenas tardes</p>
 </body>
 </html>
