--- a/estudio.html
+++ b/estudio.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link href="/your-path-to-uicons/css/uicons-[your-style].css" rel="stylesheet">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <title>leonel pereira</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C.V Leonel Pereira</title>
+  <link rel="stylesheet" href="estudios.css">
+</head>
+<body>
+<h1 style="color: black;font-size: larger; font-weight: bold; font-size: xx-large; text-align: center;">Leonel Pereira
+<h2 style="font-family: 'Times New Roman', Times, serif; font-size: x-large;"> Estudios</h2>
+<p style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;"> Estudios Secundarios</p>
+<i class="fi fi-rr-star"></i>
+<ul>
+  <li class="uade"> Instituto Saenz</li>
+</ul>
+<p style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;">Estudios Universitarios</p>
+<ul>
+ <li class="uade"> 1er año de la Licenciatura en gestión de tecnología de la información en <a href="https://www.uade.edu.ar" target="_blank">UADE </li></a>
+</ul>
+<ul>
+  <a href="index.html"><li> Volver al inicio</li></a>
+</ul>
+</body>
+</html>
