Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </div>
   
   <div class="topnav">
-    <a href="estudios.html">Link</a>
-    <a href="competencias.html">Link</a>
-    <a href="experiencia.html">Link</a>
+    <a href="estudios.html">Estudios</a>
+    <a href="competencias.html">Competencias</a>
+    <a href="experiencia.html">experiencia</a>
   </div>
   
   </body>
