--- a/estudio.html
+++ b/estudio.html
@@ -10,12 +10,12 @@
 <body>
 <h1 style="color: black;font-size: larger; font-weight: bold; font-size: xx-large; text-align: center;">Leonel Pereira
 <h2 style="font-family: 'Times New Roman', Times, serif; font-size: x-large;"> Estudios</h2>
-<p style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;"> Estudios Secundarios</p>
+<h3 style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;"> Estudios Secundarios</h3>
 <i class="fi fi-rr-star"></i>
 <ul>
   <li class="uade"> Instituto Saenz</li>
 </ul>
-<p style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;">Estudios Universitarios</p>
+<h4 style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;">Estudios Universitarios</h4>
 <ul>
  <li class="uade"> 1er año de la Licenciatura en gestión de tecnología de la información en <a href="https://www.uade.edu.ar" target="_blank">UADE </li></a>
 </ul>
