Actualizar estudio.html

--- a/estudio.html
+++ b/estudio.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="estudios.css">
 </head>
 <body>
-<h1 style="color: black;font-size: larger; font-weight: bold; font-size: xx-large; text-align: center;">Leonel Pereira
+<h1 style="color: black;font-size: larger; font-weight: bold; font-size: xx-large; text-align: center;">Leonel Pereira</h1>
 <h2 style="font-family: 'Times New Roman', Times, serif; font-size: x-large;"> Estudios</h2>
 <h3 style="font-family: 'Times New Roman', Times, serif; font-size: x-large; color: brown;"> Estudios Secundarios</h3>
 <i class="fi fi-rr-star"></i>
