--- a/experiencia.html
+++ b/experiencia.html
@@ -4,21 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>C.V Leonel Pereira</title>
-  <style>
-    p{
-      font-size: xx-large;
-    }
-  </style>
 </head>
 <body>
 <h1 style="color: black;font-size: larger; font-weight: bold;">Leonel Pereira
-<h2>Competencias </h2>
+<h2>Experiencia Laboral</h2>
 <ul> 
   <a href="index.html"><li> Datos personales </li></a>
   <a href="estudios.html"><li> Estudios </li></a>
   <a href="competencias.html"><li> Competencias</li></a>
   <a href="experiencia.html"><li> Experiencia Laboral</li></a>
 </ul>
-<p> Soy god</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aliquid sequi inventore nesciunt non cupiditate id ea perferendis quia alias deleniti blanditiis, ipsa hic assumenda magnam consequatur iure dolorem culpa.</p>
 </body>
 </html>
