--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     margin: 0;
   }
   .header {
-    background-color: #f1f1f1;
-    padding: 20px;
+    background-image: url(./JPG/4699520_2440239.jpg);
     text-align: center;
   }
   .topnav {
@@ -37,7 +36,7 @@
   </style>
   </head>
   <body>
-  
+
   <div class="header">
     <h1>Leonel Pereira</h1>
   </div>
@@ -45,14 +44,40 @@
   <div class="topnav">
     <a href="estudios.html">Estudios</a>
     <a href="competencias.html">Competencias</a>
-    <a href="experiencia.html">experiencia</a>
+    <a href="experiencia.html">Experiencia</a>
   </div>
+  <style>
+    .datos {
+      text-align: center;
+      font-family: 'Times New Roman', Times, serif;
+      font-variant: normal;
+      font-size:larger;
+      border: 1px solid black;
+      padding: 10px;
+      width: 800px;
+      height: 550px;
+      background-color: #3577ce;
+      box-shadow: 10px 10px;
+    }
+  </style>
   
   </body>
   </html>
 </head>
 <body>
-<h1 ><img src="JPG/lili2.jpg" width="700" height="850" alt="Foto Leonel" class="foto"></h1>
+  <div class="datos">
+    <ul>
+      <li>nombre completo: Leonel Gabriel Pereira</li>
+      <li>Fecha de nacimiento: 11/01/1997</li>
+      <li> DNI: 40.232.986</li>
+    <li>Tel. Cel: 1156221466</li>
+    <li>dirección: José Maria Penna 325</li>
+    <li>Localidad: Lomas de zamora</li>
+
+    <li></li>
+  </ul>
+  </div>
+<h1 ><img src="JPG/lili2.jpg" width="350" height="350"  alt="Foto Leonel" class="foto"></h1>
 <p>Hola buenas tardes</p>
 </body>
 </html>
